--- a/_includes/resume/hobbies.liquid
+++ b/_includes/resume/hobbies.liquid
@@ -1,11 +1,29 @@
-<section class="hobbies">
-  <h2 class="section-title">Hobbies</h2>
-  {% for hobby in site.data.resume.hobbies %}
-    <div class="item">
-      <h3>{{ hobby.name }}</h3>
-      {% if hobby.keywords %}
-        <p>{{ hobby.keywords | join: ", " }}</p>
-      {% endif %}
+<div class="list-groups">
+  {% for content in data[1] %}
+    <div class="list-group col-md-6">
+      <table class="table-cv list-group-table">
+        <tbody>
+          <tr>
+            {% if content.icon %}
+              <td class="list-group-category-icon">
+                <i class="{{ content.icon }}"></i>
+              </td>
+            {% else %}
+              <td class="list-group-category-icon"></td>
+            {% endif %}
+            <td colspan="1" class="list-group-category">{{ content.name }}</td>
+          </tr>
+
+          {% for item in content.keywords %}
+            <tr>
+              <td></td>
+              <td class="list-group-name">
+                <b>{{ item }}</b>
+              </td>
+            </tr>
+          {% endfor %}
+        </tbody>
+      </table>
     </div>
   {% endfor %}
-</section>
+</div>
